--- a/src/app/user-list/user-list.component.css
+++ b/src/app/user-list/user-list.component.css
@@ -1,3 +1,15 @@
 table {
     width: 100%;
   }
+
+.mat-item-update{
+  color:rgba(255,0,204,0.8);
+font-weight: bold;
+}
+.mat-item-delete{
+  color: rgba(250, 40, 12, 0.952);
+  font-weight: bold;
+} 
+#menuBox{
+  border-radius: 30%;
+}
