--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -67,13 +67,28 @@
                     <!-- Name Column -->
                     <ng-container matColumnDef="dateOfBirth">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> DateOfBirth </th>
-                        <td mat-cell *matCellDef="let row"> {{row.dateOfBirth}} </td>
+                        <td mat-cell *matCellDef="let row"> {{_datePip.transform(row.dateOfBirth,'dd/MMM/yyyy')}} </td>
                     </ng-container>
 
                     <!-- Name Column -->
                     <ng-container matColumnDef="gender">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Gender </th>
                         <td mat-cell *matCellDef="let row"> {{row.gender}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="action">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
+                        <td mat-cell *matCellDef="let row">
+                            <button mat-mini-fab mat-button [matMenuTriggerFor]="aboveMenu">
+                                <mat-icon>menu</mat-icon>
+                            </button>
+                            <mat-menu id="menuBox" #aboveMenu="matMenu" yPosition="above">
+                                <button on-click="onUpdate(row._id)" class="mat-item-update"
+                                    mat-menu-item>Update</button>
+                                <button on-click="onDelete(row._id)" class="mat-item-delete"
+                                    mat-menu-item>Delete</button>
+
+                            </mat-menu>
+                        </td>
                     </ng-container>
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
@@ -82,6 +97,7 @@
                     <tr class="mat-row" *matNoDataRow>
                         <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
                     </tr>
+
                 </table>
 
                 <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
