--- a/src/app/delete-dialog/delete-dialog.component.html
+++ b/src/app/delete-dialog/delete-dialog.component.html
@@ -1,8 +1,8 @@
 <h1 mat-dialog-title>Warning!!</h1>
 <div mat-dialog-content>
-    <p>Are you sure you want to delete this user?</p>
+    <p>Are you sure you want to delete this {{_user.content}}?</p>
 </div>
 <div mat-dialog-actions>
-    <button mat-raised-button color="warn" (click)="onYesClick(_user.id)">Delete </button>
+    <button mat-raised-button color="warn" (click)="onYesClick(_user.id,_user.content)">Delete </button>
     <button mat-raised-button color="primary" (click)="onNoClick()">Cancel</button>
 </div>
