--- a/src/app/role/role-list/role-list.component.html
+++ b/src/app/role/role-list/role-list.component.html
@@ -1,1 +1,88 @@
-<p>role-list works!</p>
+<!-- Content Wrapper. Contains page content -->
+<div class="content-wrapper">
+    <!-- Content Header (Page header) -->
+    <div class="content-header">
+        <div class="container-fluid">
+            <mat-card>
+                <div class="row mb-2">
+                    <div class="col-sm-6">
+                        <h1 class="m-0 text-dark">Role Information</h1>
+                    </div><!-- /.col -->
+                    <div class="col-sm-6">
+                        <ol class="breadcrumb float-sm-right">
+                            <li class="breadcrumb-item"><a href="#">Home</a></li>
+                            <li class="breadcrumb-item active">Role List</li>
+                        </ol>
+                    </div><!-- /.col -->
+                </div><!-- /.row -->
+            </mat-card>
+        </div><!-- /.container-fluid -->
+    </div>
+    <!-- /.content-header -->
+
+    <!-- Main content -->
+    <section class="content">
+        <div class="container-fluid">
+            <div class="row">
+                <dir class="form-group col-sm-10">
+                    <button (click)="onOpenModal()" mat-raised-button color="primary">Add New Role</button>
+
+                </dir>
+                <div class="form-group col-sm-2">
+                    <mat-form-field style="margin-right:0px">
+                        <mat-label>Search</mat-label>
+                        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+                    </mat-form-field>
+                </div>
+            </div>
+            <div class="mat-elevation-z8">
+                <table mat-table [dataSource]="dataSource" matSort>
+
+                    <!-- ID Column -->
+                    <ng-container matColumnDef="_id">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+                        <td mat-cell *matCellDef="let i=index"> {{i+1}} </td>
+                    </ng-container>
+
+                    <!-- Progress Column -->
+                    <ng-container matColumnDef="name">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Role </th>
+                        <td mat-cell *matCellDef="let row">{{row.name}}</td>
+                    </ng-container>
+                    <!-- Progress Column -->
+                    <ng-container matColumnDef="createDate">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> CreateDate </th>
+                        <td mat-cell *matCellDef="let row">{{_dataPip.transform(row.createDate,'dd/MMM/yyyy')}}</td>
+                    </ng-container>
+                    <ng-container matColumnDef="action">
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
+                        <td mat-cell *matCellDef="let row">
+                            <button mat-mini-fab mat-button [matMenuTriggerFor]="aboveMenu">
+                                <mat-icon>menu</mat-icon>
+                            </button>
+                            <mat-menu id="menuBox" #aboveMenu="matMenu" yPosition="above">
+                                <button on-click="onUpdate(row._id)" class="mat-item-update"
+                                    mat-menu-item>Update</button>
+                                <button on-click="onDelete(row._id)" class="mat-item-delete"
+                                    mat-menu-item>Delete</button>
+
+                            </mat-menu>
+                        </td>
+                    </ng-container>
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+                    <!-- Row shown when there is no matching data. -->
+                    <tr class="mat-row" *matNoDataRow>
+                        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+                    </tr>
+
+                </table>
+
+                <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+            </div>
+
+
+        </div>
+    </section>
+</div>
