--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -12,7 +12,7 @@
         <!-- Sidebar user panel (optional) -->
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
             <div class="image">
-                <img src="http://localhost:9000/{{user.file}}" class="img-circle elevation-2" alt="User Image">
+                <img src="http://localhost:9000/{{image}}" class="img-circle elevation-2" alt="User Image">
             </div>
             <div class="info">
                 <a href="#" class="d-block">Alexander Pierce</a>
@@ -237,22 +237,22 @@
                     </a>
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a routerLink="user-list" class="nav-link">
+                            <a routerLink="/user-list" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>View</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a routerLink="user-create" class="nav-link">
+                            <a routerLink="/user-create" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>Register User</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="pages/tables/jsgrid.html" class="nav-link">
+                            <button (click)="logOut()" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>jsGrid</p>
-                            </a>
+                            </button>
                         </li>
                     </ul>
                 </li>
@@ -266,7 +266,7 @@
                     </a>
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a routerLink="role-list" class="nav-link">
+                            <a routerLink="/role-list" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
                                 <p>View</p>
                             </a>
