--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,118 +1,107 @@
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    <div class="content-header">
-        <div class="container-fluid">
-            <mat-card>
-                <div class="row mb-2">
-                    <div class="col-sm-6">
-                        <h1 class="m-0 text-dark">User Information</h1>
-                    </div><!-- /.col -->
-                    <div class="col-sm-6">
-                        <ol class="breadcrumb float-sm-right">
-                            <li class="breadcrumb-item"><a href="#">Home</a></li>
-                            <li class="breadcrumb-item active">Register User</li>
-                        </ol>
-                    </div><!-- /.col -->
-                </div><!-- /.row -->
-            </mat-card>
-        </div><!-- /.container-fluid -->
-    </div>
-    <!-- /.content-header -->
+  <!-- Content Header (Page header) -->
+  <div class="content-header">
+    <div class="container-fluid">
+      <mat-card>
+        <div class="row mb-2">
+          <div class="col-sm-6">
+            <h1 class="m-0 text-dark">User Information</h1>
+          </div><!-- /.col -->
+          <div class="col-sm-6">
+            <ol class="breadcrumb float-sm-right">
+              <li class="breadcrumb-item"><a href="#">Home</a></li>
+              <li class="breadcrumb-item active">Register User</li>
+            </ol>
+          </div><!-- /.col -->
+        </div><!-- /.row -->
+      </mat-card>
+    </div><!-- /.container-fluid -->
+  </div>
+  <!-- /.content-header -->
 
-    <!-- Main content -->
-    <section class="content">
-        <div class="container-fluid">
-            <div class="row">
-                <dir class="form-group col-sm-10">
-                    <a routerLink="/user-create" routerLinkActive="router-link-active" mat-raised-button
-                        color="primary">Add User</a>
-
-                </dir>
-                <div class="form-group col-sm-2">
-                    <mat-form-field style='width: 100%;'>
-                        <mat-label>Search</mat-label>
-                        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
-                    </mat-form-field>
-                </div>
-            </div>
-
-            <div class="mat-elevation-z8">
-                <table mat-table [dataSource]="dataSource" matSort>
-
-                    <!-- ID Column -->
-                    <ng-container matColumnDef="i">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-                        <td mat-cell *matCellDef="let i=index"> {{i+1}} </td>
-                    </ng-container>
-
-                    <!-- Progress Column -->
-                    <ng-container matColumnDef="firstName">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> FirsName </th>
-                        <td mat-cell *matCellDef="let row"> {{row.firstName}} </td>
-                    </ng-container>
-
-                    <!-- Name Column -->
-                    <ng-container matColumnDef="lastName">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> LastName </th>
-                        <td mat-cell *matCellDef="let row"> {{row.lastName}} </td>
-                    </ng-container>
-
-                    <!-- Color Column -->
-
-                    <!-- Name Column -->
-                    <ng-container matColumnDef="email">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
-                        <td mat-cell *matCellDef="let row"> {{row.email}} </td>
-                    </ng-container>
-
-                    <!-- Name Column -->
-                    <ng-container matColumnDef="role">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Role </th>
-                        <td mat-cell *matCellDef="let row"> {{row.role}} </td>
-                    </ng-container>
-                    <!-- Color Column -->
-
-                    <!-- Name Column -->
-                    <ng-container matColumnDef="dateOfBirth">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> DateOfBirth </th>
-                        <td mat-cell *matCellDef="let row"> {{_datePip.transform(row.dateOfBirth,'dd/MMM/yyyy')}} </td>
-                    </ng-container>
-
-                    <!-- Name Column -->
-                    <ng-container matColumnDef="gender">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Gender </th>
-                        <td mat-cell *matCellDef="let row"> {{row.gender}} </td>
-                    </ng-container>
-                    <ng-container matColumnDef="action">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
-                        <td mat-cell *matCellDef="let row">
-                            <button mat-mini-fab mat-button [matMenuTriggerFor]="aboveMenu">
-                                <mat-icon>menu</mat-icon>
-                            </button>
-                            <mat-menu id="menuBox" #aboveMenu="matMenu" yPosition="above">
-                                <button on-click="onUpdate(row._id)" class="mat-item-update"
-                                    mat-menu-item>Update</button>
-                                <button on-click="onDelete(row._id)" class="mat-item-delete"
-                                    mat-menu-item>Delete</button>
-
-                            </mat-menu>
-                        </td>
-                    </ng-container>
-                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-                    <!-- Row shown when there is no matching data. -->
-                    <tr class="mat-row" *matNoDataRow>
-                        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-                    </tr>
-
-                </table>
-
-                <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
-            </div>
-
+  <!-- Main content -->
+  <section class="content">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="form-group col-sm-10">
+          <a routerLink="/user-create" routerLinkActive="router-link-active" mat-raised-button color="primary">Add
+            User</a>
 
         </div>
-    </section>
+        <div class="form-group col-sm-2">
+          <mat-form-field style='width: 100%;'>
+            <mat-label>Search</mat-label>
+            <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+          </mat-form-field>
+        </div>
+      </div>
+
+      <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort>
+
+          <!-- ID Column -->
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+            <td mat-cell *matCellDef="let i=index"> {{i+1}} </td>
+          </ng-container>
+
+          <!-- Progress Column -->
+          <ng-container matColumnDef="firstName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> FirsName </th>
+            <td mat-cell *matCellDef="let row"> {{row.firstName}} </td>
+          </ng-container>
+
+          <!-- Name Column -->
+          <ng-container matColumnDef="lastName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> LastName </th>
+            <td mat-cell *matCellDef="let row"> {{row.lastName}} </td>
+          </ng-container>
+
+          <!-- Color Column -->
+
+          <!-- Name Column -->
+          <ng-container matColumnDef="email">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
+            <td mat-cell *matCellDef="let row"> {{row.email}} </td>
+          </ng-container>
+          <!-- Name Column -->
+          <ng-container matColumnDef="dateOfBirth">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> DateOfBirth </th>
+            <td mat-cell *matCellDef="let row"> {{_datePip.transform(row.dateOfBirth,'dd/MMM/yyyy')}} </td>
+          </ng-container>
+
+          <!-- Name Column -->
+          <ng-container matColumnDef="gender">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Gender </th>
+            <td mat-cell *matCellDef="let row"> {{row.gender}} </td>
+          </ng-container>
+          <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
+            <td mat-cell *matCellDef="let row">
+              <button title="Edit" mat-icon-button color="primary" on-click="onUpdate(row.id)" class="mat-item-update">
+                <mat-icon>edit</mat-icon>
+              </button>
+              <button on-click="onDelete(row.id)" mat-icon-button aria-label="Example icon button with a delete icon"
+                title="Delete" class="mat-item-delete">
+                <mat-icon>delete</mat-icon>
+              </button>
+            </td>
+          </ng-container>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+          <!-- Row shown when there is no matching data. -->
+          <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+          </tr>
+
+        </table>
+
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+      </div>
+
+
+    </div>
+  </section>
 </div>
