--- a/src/app/role/role-list/role-list.component.css
+++ b/src/app/role/role-list/role-list.component.css
@@ -1,20 +1,26 @@
 table {
-    width: 100%;
-  }
-
-.mat-item-update{
-  color:rgba(255,0,204,0.8);
-font-weight: bold;
+  width: 100%;
 }
-.mat-item-delete{
+
+.mat-item-update {
+  color: rgba(255, 0, 204, 0.8);
+  font-weight: bold;
+}
+
+.mat-item-delete {
   color: rgba(250, 40, 12, 0.952);
   font-weight: bold;
-} 
-#menuBox{
+}
+
+#menuBox {
   border-radius: 30%;
 }
 
 .example-button-row {
   display: table-cell;
   width: 490px;
+}
+
+.spinner-container mat-spinner {
+  margin: 130px auto 0 auto;
 }
