--- a/src/app/role/role-list/role-list.component.html
+++ b/src/app/role/role-list/role-list.component.html
@@ -26,22 +26,27 @@
       <div class="row">
         <div class="form-group col-sm-10">
           <button (click)="onOpenModal()" mat-raised-button color="primary">Add New Role</button>
-
         </div>
         <div class="form-group col-sm-2">
           <mat-form-field style="margin-right:0px">
             <mat-label>Search</mat-label>
-            <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+            <input matInput placeholder="Ex. Mia" #input>
           </mat-form-field>
         </div>
       </div>
+      <div class="spinner-container" *ngIf="roleDataSource.loading$ | async">
+
+        <mat-spinner></mat-spinner>
+
+      </div>
       <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort>
+        <table mat-table [dataSource]="roleDataSource" matSort matSort matSortActive="name" matSortDirection="asc"
+          matSortDisableClear>
 
           <!-- ID Column -->
-          <ng-container matColumnDef="_id">
+          <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-            <td mat-cell *matCellDef="let i=index"> {{i+1}} </td>
+            <td mat-cell *matCellDef="let i=index"> {{(i+1) + (paginator.pageIndex * paginator.pageSize)}} </td>
           </ng-container>
 
           <!-- Progress Column -->
@@ -75,7 +80,8 @@
 
         </table>
 
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+        <mat-paginator [length]="rowCount?.rowCount" [pageSize]="5" [pageSizeOptions]="[5, 10, 25, 100]">
+        </mat-paginator>
       </div>
 
 
