--- a/src/app/role/role-list/role-list.component.html
+++ b/src/app/role/role-list/role-list.component.html
@@ -7,16 +7,20 @@
         <div class="row mb-2">
           <div class="col-sm-6">
             <h1 class="m-0 text-dark">Role Information</h1>
-          </div><!-- /.col -->
+          </div>
+          <!-- /.col -->
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
               <li class="breadcrumb-item"><a href="#">Home</a></li>
               <li class="breadcrumb-item active">Role List</li>
             </ol>
-          </div><!-- /.col -->
-        </div><!-- /.row -->
+          </div>
+          <!-- /.col -->
+        </div>
+        <!-- /.row -->
       </mat-card>
-    </div><!-- /.container-fluid -->
+    </div>
+    <!-- /.container-fluid -->
   </div>
   <!-- /.content-header -->
 
@@ -25,42 +29,47 @@
     <div class="container-fluid">
       <div class="row">
         <div class="form-group col-sm-10">
-          <button (click)="onOpenModal()" mat-raised-button color="primary">Add New Role</button>
+          <button (click)="onOpenModal()" mat-raised-button color="primary">
+            Add New Role
+          </button>
         </div>
         <div class="form-group col-sm-2">
-          <mat-form-field style="margin-right:0px">
+          <mat-form-field style="margin-right: 0px">
             <mat-label>Search</mat-label>
-            <input matInput placeholder="Ex. Mia" #input>
+            <input matInput placeholder="Ex. Mia" #input />
           </mat-form-field>
         </div>
       </div>
       <div class="spinner-container" *ngIf="roleDataSource.loading$ | async">
-
         <mat-spinner></mat-spinner>
-
       </div>
       <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="roleDataSource" matSort matSort matSortActive="name" matSortDirection="asc"
+        <table mat-table [dataSource]="roleDataSource" matSort matSortActive="id" matSortDirection="asc"
           matSortDisableClear>
-
           <!-- ID Column -->
           <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-            <td mat-cell *matCellDef="let i=index"> {{(i+1) + (paginator.pageIndex * paginator.pageSize)}} </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
+            <td mat-cell *matCellDef="let i = index">
+              {{ i + 1 + paginator.pageIndex * paginator.pageSize }}
+            </td>
           </ng-container>
 
           <!-- Progress Column -->
           <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Role </th>
-            <td mat-cell *matCellDef="let row">{{row.name}}</td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Role</th>
+            <td mat-cell *matCellDef="let row">{{ row.name }}</td>
           </ng-container>
           <!-- Progress Column -->
           <ng-container matColumnDef="createDate">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> CreateDate </th>
-            <td mat-cell *matCellDef="let row">{{_dataPip.transform(row.createDate,'dd/MMM/yyyy')}}</td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>
+              CreateDate
+            </th>
+            <td mat-cell *matCellDef="let row">
+              {{ _dataPip.transform(row.createDate, "dd/MMM/yyyy") }}
+            </td>
           </ng-container>
           <ng-container matColumnDef="action">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
+            <th mat-header-cell *matHeaderCellDef>Action</th>
             <td mat-cell *matCellDef="let row">
               <button title="Edit" mat-icon-button color="primary" on-click="onUpdate(row.id)" class="mat-item-update">
                 <mat-icon>edit</mat-icon>
@@ -71,20 +80,20 @@
             </td>
           </ng-container>
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
           <!-- Row shown when there is no matching data. -->
           <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+            <td class="mat-cell" colspan="4">
+              No data matching the filter "{{ input.value }}"
+            </td>
           </tr>
-
         </table>
 
-        <mat-paginator [length]="rowCount?.rowCount" [pageSize]="5" [pageSizeOptions]="[5, 10, 25, 100]">
+        <mat-paginator style-paginator showFirstLastButtons [length]="rowCount?.rowCount" [pageSize]="5"
+          [pageSizeOptions]="[5, 10, 25, 100]">
         </mat-paginator>
       </div>
-
-
     </div>
   </section>
 </div>
