--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -32,18 +32,18 @@
         <div class="form-group col-sm-2">
           <mat-form-field style='width: 100%;'>
             <mat-label>Search</mat-label>
-            <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+            <input matInput placeholder="Ex. Mia" #input>
           </mat-form-field>
         </div>
       </div>
 
       <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort>
+        <table mat-table [dataSource]="userDataSource" matSort>
 
           <!-- ID Column -->
           <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-            <td mat-cell *matCellDef="let i=index"> {{i+1}} </td>
+            <td mat-cell *matCellDef="let i=index"> {{ i + 1 + paginator.pageIndex * paginator.pageSize }} </td>
           </ng-container>
 
           <!-- Progress Column -->
@@ -98,7 +98,9 @@
 
         </table>
 
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+        <mat-paginator style-paginator showFirstLastButtons [length]="rowCount?.count" [pageSize]="5"
+          [pageSizeOptions]="[5, 10, 25, 100]">
+        </mat-paginator>
       </div>
 
 
