--- a/src/app/role/role-list/role-list.component.html
+++ b/src/app/role/role-list/role-list.component.html
@@ -92,7 +92,7 @@
           </tr>
         </table>
 
-        <mat-paginator style-paginator showFirstLastButtons [length]="rowCount?.count" [pageSize]="5"
+        <mat-paginator style-paginator showFirstLastButtons [length]="rowCount?.rowCount" [pageSize]="5"
           [pageSizeOptions]="[5, 10, 25, 100]">
         </mat-paginator>
       </div>
