--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -79,10 +79,10 @@
           <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
             <td mat-cell *matCellDef="let row">
-              <button title="Edit" mat-icon-button color="primary" on-click="onUpdate(row.id)" class="mat-item-update">
+              <button title="Edit" mat-icon-button color="primary" on-click="onUpdate(row._id)" class="mat-item-update">
                 <mat-icon>edit</mat-icon>
               </button>
-              <button on-click="onDelete(row.id)" mat-icon-button aria-label="Example icon button with a delete icon"
+              <button on-click="onDelete(row._id)" mat-icon-button aria-label="Example icon button with a delete icon"
                 title="Delete" class="mat-item-delete">
                 <mat-icon>delete</mat-icon>
               </button>
@@ -98,7 +98,7 @@
 
         </table>
 
-        <mat-paginator style-paginator showFirstLastButtons [length]="rowCount?.count" [pageSize]="5"
+        <mat-paginator style-paginator showFirstLastButtons [length]="rowCount?.rowCount" [pageSize]="5"
           [pageSizeOptions]="[5, 10, 25, 100]">
         </mat-paginator>
       </div>
