--- a/src/app/user-update/user-update.component.html
+++ b/src/app/user-update/user-update.component.html
@@ -123,7 +123,7 @@
               <mat-label>Role</mat-label>
               <mat-select name='role' (selectionChange)="change($event)" formControlName="role" required>
                 <mat-option>None</mat-option>
-                <mat-option *ngFor="let role of roles" [value]="role.id">{{role.name}}
+                <mat-option *ngFor="let role of roles" [value]="role.name">{{role.name}}
                 </mat-option>
               </mat-select>
               <mat-error *ngIf="role.invalid && role.touched">
