--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -36,7 +36,9 @@
           </mat-form-field>
         </div>
       </div>
-
+      <!-- <div class="spinner-container" *ngIf="userDataSource.loading$ | async">
+        <mat-spinner></mat-spinner>
+      </div> -->
       <div class="mat-elevation-z8">
         <table mat-table [dataSource]="userDataSource" matSort>
 
