--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -202,7 +202,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a routerLink="company-create" class="nav-link">
+              <a routerLink="/company-create" class="nav-link">
                 <i class="far fa-circle nav-icon"></i>
                 <p>Register Company</p>
               </a>
