--- a/src/app/role/role-list/role-list.component.html
+++ b/src/app/role/role-list/role-list.component.html
@@ -118,7 +118,7 @@
         <mat-paginator
           style-paginator
           showFirstLastButtons
-          [length]="10000"
+          [length]="rowCount?.rowCount"
           [pageSize]="5"
           [pageSizeOptions]="[5, 10, 25, 100]"
         >
