--- a/src/app/user-list/user-list.component.css
+++ b/src/app/user-list/user-list.component.css
@@ -15,3 +15,14 @@ table {
 #menuBox {
   border-radius: 30%;
 }
+
+.pupupspinner {
+  z-index: 1;
+  position: absolute;
+  margin: 0;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%)
+}
